<resources>
    <string name="app_name">GymApp</string>
    <string name="calendar">Schedule</string>
    <string name="trainings">Workouts</string>
    <string name="statistics">Statistics</string>
    <string name="planner">Creator</string>
    <string name="trainingCreator">Creator</string>
    <string name="enterTrainingName">Enter workout name</string>
    <string name="enterExerciseName">Enter exercise name</string>
    <string name="save">Save</string>
    <string name="exercise">Exercise</string>
    <string name="exercises">Exercises</string>
    <string name="Continue">Continue</string>

    <string name="addNewExercise">+</string>
    <string name="actPlannerCreateTraining">Create Workout</string>
    <string name="actPlannerTrainingList">Workouts List</string>
    <string name="DELETE">Delete</string>
    <string name="selectPartError">"Select part!"</string>
    <string name="chooseType">Select type</string>
    <!-- activity_training.xml -->
    <string name="clickToContinue">"Click to continue"</string>
    <string name="training">Workout</string>
    <string name="selectAnotherTraining">Select another</string>
    <string name="errorTitle">Sorry, </string>
    <string name="errorBody">there is no workout for today </string>
    <string name="seriesNumber">Sets</string>

    <!-- activity_enter_exercise_name.xml -->
    <string name="trainingNameHint">Enter name</string>
    <string name="biceps">Biceps</string>
    <string name="chest">Chest</string>
    <string name="triceps">Triceps</string>
    <string name="thighs">Thighs</string>
    <string name="calves">Calves</string>
    <string name="back">Back</string>
    <string name="neck">Neck</string>
    <string name="shoulders">Shoulders</string>
    <string name="abs">Abs</string>
    <string name="cardio">Cardio</string>

    <!-- Series adapter -->
    <string name="series">Sets</string>
    <string name="reps">Reps</string>
    <string name="weight">Weight</string>
    <string name="minutes">Minutes</string>
    <string name="meters">Meters</string>

    <!-- TrainingListAdapter - TLA -->
    <string name="TLA_Title_Dialog">Delete workout</string>
    <string name="TLA_Msg_Dialog">Are you sure you want to remove workout: </string>
    <string name="TLA_YES">YES</string>
    <string name="TLA_NO">NO</string>

    <!-- CreateTrainingActivity - CTA -->
    <string name="CTA_Title_Dialog">Overwrite workout</string>
    <string name="CTA_Msg_1_Dialog">Workout with name:</string>
    <string name="CTA_Msg_2_Dialog">already exists. Do you want overwrite it?</string>
    <string name="CTA_YES">YES</string>
    <string name="CTA_NO">NO</string>
    <string name="CTA_Empty_Name_Err">Name cannot be empty!</string>
    <string name="CTA_Empty_Training_Err">Workout cannot be empty!</string>

    <!-- settings_dialog.xml -->
    <string name="SD_language">Language</string>
    <string name="SD_theme">Theme</string>
    <string name="SD_dark">Dark</string>
    <string name="SD_light">Light</string>
    <string name="SD_polish">Polish</string>
    <string name="SD_english">English</string>
    <string name="MA_name">Settings</string>
    <string name="MA_save">Save</string>
    <string name="MA_cancel">Cancel</string>

    <!-- activity_enter_exercise_name.xml -->
    <string name="bicepsTag" translatable="false">Biceps</string>
    <string name="chestTag" translatable="false">Chest</string>
    <string name="tricepsTag" translatable="false">Triceps</string>
    <string name="thighsTag" translatable="false">Thighs</string>
    <string name="calvesTag" translatable="false">Calves</string>
    <string name="backTag" translatable="false">Back</string>
    <string name="neckTag" translatable="false">Neck</string>
    <string name="shouldersTag" translatable="false">Shoulders</string>
    <string name="absTag" translatable="false">Abs</string>
    <string name="cardioTag" translatable="false">Cardio</string>

    <!-- Calendar -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="gymapp">Gymapp</string>

    <string name="nameEx">Name</string>
    <string name="typeEx">Type</string>

    <!-- activity_training.xml    -->
    <string name="begin">Begin</string>
    <string name="currentExercise">Current Exercise</string>
    <string name="todo">To do:</string>
    <string name="done">Done!</string>
    <string name="congratulations">Congratulations!</string>
    <string name="trainingFinished">today\'s workout finished!</string>
    <string name="of"> of </string>
    <string name="exerciseTime"> exercise time </string>
    <string name="restTime"> rest time </string>
    <string name="finish">finish</string>
    <string name="mess">Do you want to back to main menu?</string>
    <string name="goBack">Back</string>

    <!-- CalendarActivity.kt -->
    <string name="no_workout">No workouts</string>
    <string name="no_workout_msg">There is no workouts available. Do you want to create one?</string>
    <string name="title_activity_statistics_tab">StatisticsTabActivity</string>
    <string name="tab_text_1">Rest time</string>
    <string name="tab_text_2">Total weight</string>
    <string name="tab_text_3">Number of reps</string>
</resources>