<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TrainingCreatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="100"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".activities.CalendarActivity"
    style="?mainBackground"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="8"
        style="?navStyle"
        >
        <ImageView
            android:id="@+id/navBarAction"
            android:src="@drawable/ic_launcher_back_icon_foreground"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="?navImageViewStyle"
            />
        <TextView
            android:id="@+id/navBarTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:text="@string/trainingCreator"
            style="?navTextViewStyle"
            />
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="92"
        android:orientation="vertical">

        <EditText
            android:id="@+id/enterTrainingName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1.28"
            android:cursorVisible="false"
            android:inputType="text"
            android:singleLine="true"
            android:hint="@string/trainingNameHint"
            style="?aCreateTrainingEditText"
            />

        <TextView
            android:id="@+id/EnterTraining2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="5dp"
            android:layout_weight="0.5"
            android:text="@string/enterTrainingName"
            android:visibility="visible"
            style="?aCreateTrainingTextView"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="3dp"

            android:background="@color/almost_transparent" />

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:layoutAnimation="@anim/recycler_layout_animation"
                android:focusableInTouchMode="true" />
        </RelativeLayout>


        <Button
            android:id="@+id/endCreatingExercises"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1.28"
            style="?aCreateTrainingButton"
            android:text="@string/save"
            />
    </LinearLayout>
</LinearLayout>

