<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/exerciseLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="15"
    android:background="@color/black"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".activities.ExerciseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/text_transpatentish"
        android:backgroundTint="@color/graphite"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backExercise"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:padding="10dp"
            android:src="@drawable/backward" />

        <TextView
            android:id="@+id/plannerTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_weight="5"
            android:fontFamily="serif-monospace"
            android:text="@string/exercise"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"

            />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="14"

        android:orientation="vertical"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/series"
            android:textAlignment="center"

            android:textSize="25sp">

        </TextView>

        <HorizontalScrollView
            android:id="@+id/seriesScroll"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="start"
            android:layout_weight="2"
            android:accessibilityLiveRegion="assertive"

            android:focusable="true"
            android:focusableInTouchMode="true"

            >

            <LinearLayout
                android:id="@+id/seriesPicker"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal" />
        </HorizontalScrollView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">


            <Button
                android:id="@+id/deleteSeries"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="0.5"
                android:background="@drawable/entry_shape"
                android:backgroundTint="@color/red"
                android:text="@string/DELETE" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"

            android:orientation="vertical"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/pickerText1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"

                    android:text="@string/reps"
                    android:textAlignment="center"
                    android:textSize="25sp">

                </TextView>

                <TextView
                    android:id="@+id/pickerText2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"

                    android:text="@string/weight"
                    android:textAlignment="center"
                    android:textSize="25sp">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6">

                <NumberPicker
                    android:id="@+id/repsPicker"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="3"
                    android:background="@drawable/picker_shape"
                    android:backgroundTint="@color/whiteTransparent"

                    >

                </NumberPicker>

                <NumberPicker
                    android:id="@+id/weightPicker"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="3"
                    android:background="@drawable/picker_shape"
                    android:backgroundTint="@color/whiteTransparent">

                </NumberPicker>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <Button
                android:id="@+id/endWindow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"

                android:layout_marginTop="15dp"
                android:layout_marginRight="70dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:background="@drawable/entry_shape"
                android:backgroundTint="@color/green"
                android:text="@string/save" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">


        </RelativeLayout>


    </LinearLayout>


</LinearLayout>