<?xml version="1.0" encoding="utf-8"?><!-- Planner -> Trainings List -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    style="?mainBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="100"
    android:orientation="vertical"
    tools:context=".activities.BeginExerciseActivity"

    >

    <LinearLayout
        style="?navStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/navBarAction"
            style="?navImageViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_launcher_back_icon_foreground" />

        <TextView
            android:id="@+id/navBarTitle"
            style="?navTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:text="@string/currentExercise"
            />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="92"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="72"

            android:orientation="vertical">

            <TextView
                android:id="@+id/exerciseName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="30dp"
                android:maxLines="3"
                android:text="ExerciseName"
                android:textAlignment="center"
                android:textSize="26sp"
                style="?aPlannerTextView"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="30dp"
                style="?aStatisticsTabs" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="25dp"
                android:maxLines="3"
                android:text="@string/todo"
                android:textAlignment="center"
                android:textSize="22sp"
                style="?aPlannerTextView"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/reps"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="3"
                        android:textAlignment="center"
                        android:textSize="26sp"
                        style="?aPlannerTextView"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/reps"
                        android:textAlignment="center"
                        android:textSize="22sp"
                        style="?aPlannerTextView"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/weight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="26sp"
                        style="?aPlannerTextView"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:id="@+id/weightDesc"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/weight"
                        android:textAlignment="center"
                        android:textSize="22sp"
                        style="?aPlannerTextView"
                        />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="80dp"
                    android:layout_marginBottom="15dp"
                    style="?aStatisticsTabs" />
                <TextView
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:text="@string/exerciseTime"
                    style="?aPlannerTextView"
                    />
                <TextView
                    android:id="@+id/clock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textAlignment="center"
                    android:textSize="40sp"
                    style="?aPlannerTextView"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                style="?aStatisticsTabs"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent">

                <androidx.cardview.widget.CardView
                    android:layout_alignParentBottom="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    app:cardElevation="0dp"
                    style="?aPlannerCardView"
                    >

                    <Button
                        android:id="@+id/doneButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/done"
                        android:textSize="22sp"
                        style="?aCreateTrainingButton"
                        />

                </androidx.cardview.widget.CardView>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>



</LinearLayout>


