<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.PlannerActivity"
    style="?mainBackground"
    android:orientation="vertical"
    android:layout_weight="100"

    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="8"
        style="?navStyle"
        >
        <ImageView
            android:id="@+id/navBarAction"
            android:src="@drawable/ic_launcher_back_icon_foreground"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="?navImageViewStyle"
            />
        <TextView
            android:id="@+id/navBarTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:text="@string/planner"
            style="?navTextViewStyle"
            />
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="92"
        android:orientation="vertical"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/createTrainingCardView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            style="?aPlannerCardView"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                style="?cardViewElementBackground"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:text="@string/actPlannerCreateTraining"
                    style="?aPlannerTextView"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:src="@drawable/carpenter"
                    style="?aPlannerImageView"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/createTrainingsListCardViev"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            style="?aPlannerCardView"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                style="?cardViewElementBackground"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:text="@string/actPlannerTrainingList"
                    style="?aPlannerTextView"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:src="@drawable/check"
                    style="?aPlannerImageView"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>




        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >
        </RelativeLayout>

    </LinearLayout>


</LinearLayout>