<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EnterExerciseNameActivity"
    android:background="@color/black"
    android:orientation="vertical"
    android:layout_weight="15"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="@color/black"
        >

        <ImageView
            android:id="@+id/backEnterName"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:src="@drawable/backward"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:padding="10dp"
            />
        <TextView
            android:id="@+id/enterExerciseNameTitle"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:text="@string/exercise"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:fontFamily="serif-monospace"
            android:layout_marginTop="5dp"
            android:layout_weight="5"

            />
        <ImageView
            android:id="@+id/settingsEnterName"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:src="@drawable/settings"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:padding="10dp"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="13"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">


        </RelativeLayout>
        <EditText
            android:id="@+id/enterExerciseNameEntry"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="60dp"
            android:background="@drawable/entry_shape"
            android:backgroundTint="@color/almost_transparent"
            android:cursorVisible="false"
            android:hint="@string/enterExerciseName"
            android:inputType="text"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/text_transpatentish"
            android:textSize="17sp"
            />
        <TextView
            android:id="@+id/TrainingNameEmpty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty_name"
            android:layout_marginVertical="2dp"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:visibility="invisible"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Chose type"
            android:layout_marginVertical="20dp"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textColor="@color/white"
            />
        <HorizontalScrollView
            android:id="@+id/typeScroll"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="start"
            android:layout_weight="2"
            android:accessibilityLiveRegion="assertive"
            android:background="@color/black"
            android:focusable="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"
            android:focusableInTouchMode="true"

            >

            <LinearLayout
                android:id="@+id/typePicker"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"></LinearLayout>
        </HorizontalScrollView>




    </LinearLayout>

    <Button
        android:id="@+id/ContinueCreatingButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/Continue"
        android:background="@drawable/entry_shape"
        android:backgroundTint="@color/green"
        android:layout_marginHorizontal="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


    </RelativeLayout>

</LinearLayout>